@@ -191,6 +191,7 @@ if ($hosts) {
 			'error', 'trends', 'history', 'delay', 'key_'),
 		'selectApplications' => array('applicationid'),
 		'selectItemDiscovery' => array('ts_delete'),
+		'webitems' => true,
 		'filter' => array(
 			'status' => array(ITEM_STATUS_ACTIVE)
 		),
@@ -408,8 +409,11 @@ foreach ($items as $key => $item){
 
 	$stateCss = ($item['state'] == ITEM_STATE_NOTSUPPORTED) ? 'unknown txt' : 'txt';
 	$itemName = array(SPACE, SPACE, $item['resolvedName']);
+
 	if ($filterShowDetails) {
-		$itemKey = new CLink(resolveItemKeyMacros($item), 'items.php?form=update&itemid='.$item['itemid']);
+		$itemKey = ($item['type'] == ITEM_TYPE_HTTPTEST)
+			? new CSpan(resolveItemKeyMacros($item), 'enabled')
+			: new CLink(resolveItemKeyMacros($item), 'items.php?form=update&itemid='.$item['itemid'], 'enabled');
 		$itemName = array_merge($itemName, array(BR(), SPACE, SPACE, $itemKey));
 
 		$statusIcons = array();
@@ -582,7 +586,9 @@ foreach ($items as $item) {
 	$itemName = array(SPACE, SPACE, $item['resolvedName']);
 
 	if ($filterShowDetails) {
-		$itemKey = new CLink(resolveItemKeyMacros($item), 'items.php?form=update&itemid='.$item['itemid']);
+		$itemKey = ($item['type'] == ITEM_TYPE_HTTPTEST)
+			? new CSpan(resolveItemKeyMacros($item), 'enabled')
+			: new CLink(resolveItemKeyMacros($item), 'items.php?form=update&itemid='.$item['itemid'], 'enabled');
 		$itemName = array_merge($itemName, array(BR(), SPACE, SPACE, $itemKey));
 
 		$statusIcons = array();
