@@ -4,6 +4,7 @@ New features:
 ..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)
 
 Bug fixes:
+..F....... [ZBX-7189] fixed displaing web items in latest (Eduard)
 A.F....... [ZBX-7170] improved performance of item.get method and other API requests with "selectItems" option (Ivo)
 ..F....... [ZBX-7144] fixed latest data table column widths (Ivo)
 A......... [ZBX-7152] fixed get method subselects not working correctly if a specific node is selected (Ivo)
